@@ -1,3 +1,4 @@
+12/5/11 Added a speedometer
 12/5/11 Added a getter to make it possible to override backgrounds
 12/2/11 #3136, move piccolo-phet string literals to sim-sharing object/action/parameter classes
 12/1/11 Require PieChartNode entries to be non-negative
